applied slick plugin to featured products implemented randomization

--- a/widgets/featured-products/index.htm
+++ b/widgets/featured-products/index.htm
@@ -10,7 +10,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/archive-manager/" target="_self"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/archive-manager/" target="_self">Archive Manager</a></h4>
+              <h4 class="mt-10"><a href="/products/archive-manager/" target="_self">Archive Manager</a></h4>
               <p>Gain complete control of Exchange for efficient, effective email archiving.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_ArchiveManager">
@@ -22,7 +22,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/cloud-access-manager/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/cloud-access-manager/">Cloud Access Manager</a></h4>
+              <h4 class="mt-10"><a href="/products/cloud-access-manager/">Cloud Access Manager</a></h4>
               <p>Ensure secure cloud access and increase IT efficiency.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_CloudAccessManager">
@@ -35,7 +35,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/appassure/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/appassure/">AppAssure</a></h4>
+              <h4 class="mt-10"><a href="/products/appassure/">AppAssure</a></h4>
               <p>Get fast backup, replication and recovery.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_July3-2013_AppAssure">
@@ -47,7 +47,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/sonicwall-email-security-appliances/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/sonicwall-email-security-appliances/">
                   SonicWALL Email
                   Security
@@ -64,7 +64,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/sonicwall-tz/ "><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/sonicwall-tz/ ">SonicWALL TZ Series</a></h4>
+              <h4 class="mt-10"><a href="/products/sonicwall-tz/ ">SonicWALL TZ Series</a></h4>
               <p>Get high-performance UTM firewall security.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Sept5-2013_SonicWALLTZ" target="_self">
@@ -76,7 +76,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/sonicwall-nsa/ "><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/sonicwall-nsa/ " target="_self">SonicWALL NSA Series Appliances</a></h4>
+              <h4 class="mt-10"><a href="/products/sonicwall-nsa/ " target="_self">SonicWALL NSA Series Appliances</a></h4>
               <p>Simplify security and boost network performance.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_NSA">Try Online</a>
@@ -85,7 +85,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/dr2000v-virtual-backup-appliance/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/dr2000v-virtual-backup-appliance/">
                   Dell DR2000v backup
                   disk virtual appliance
@@ -102,7 +102,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/desktop-authority-management-suite/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/desktop-authority-management-suite/">
                   Desktop Authority
                   Management Suite
@@ -120,7 +120,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/unified-communications-command-suite/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/unified-communications-command-suite/">UCCS</a></h4>
+              <h4 class="mt-10"><a href="/products/unified-communications-command-suite/">UCCS</a></h4>
               <p>Streamline communications with flexible cross-platform management.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_UCCS">Download Free Trial</a>
@@ -129,7 +129,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/remotescan-enterprise/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/remotescan-enterprise/">RemoteScan</a></h4>
+              <h4 class="mt-10"><a href="/products/remotescan-enterprise/">RemoteScan</a></h4>
               <p>Enable scanning in any environment.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Aug16-2013_RemoteScan">
@@ -141,7 +141,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/recovery-manager-for-active-directory-forest-edition/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/recovery-manager-for-active-directory-forest-edition/">
                   Recovery
                   Manager for AD Forest Edition
@@ -158,7 +158,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/migration-manager-for-active-directory/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/migration-manager-for-active-directory/">
                   Migration Manager
                   for Active Directory
@@ -176,7 +176,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/foglight-for-virtualization-standard-edition/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/foglight-for-virtualization-standard-edition/">
                   Foglight
                   for Virtualization (Standard)
@@ -193,7 +193,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/change-auditor-for-active-directory/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/change-auditor-for-active-directory/">
                   Change Auditor for
                   Active Directory
@@ -210,7 +210,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/shareplex/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/shareplex/">SharePlex</a></h4>
+              <h4 class="mt-10"><a href="/products/shareplex/">SharePlex</a></h4>
               <p>Enable high-performance replication and data integration for Oracle.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_Shareplex">
@@ -222,7 +222,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/toad-for-oracle/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/toad-for-oracle/">Toad for Oracle</a></h4>
+              <h4 class="mt-10"><a href="/products/toad-for-oracle/">Toad for Oracle</a></h4>
               <p>Increase productivity for database development and administration.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_ToadforOracle">
@@ -234,7 +234,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/kace-k1000-systems-management-appliance"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4>
+              <h4 class="mt-10">
                 <a href="/products/kace-k1000-systems-management-appliance">
                   KACE K1000
                   Systems Management Appliance
@@ -248,7 +248,7 @@
           <li class="col-md-4 col-sm-6 col-xs-12">
             <a href="/products/statistica/"><img class="img-responsive img-border center-block-xs" src="../image.php?w=370&h=250&c=c0c0c0&t=" /></a>
             <div class="product-text-wrapper">
-              <h4><a href="/products/statistica/">Statistica</a></h4>
+              <h4 class="mt-10"><a href="/products/statistica/">Statistica</a></h4>
               <p>Revolutionize decision making with advanced predictive analytics software.</p>
             </div>
             <a class="btn btn-primary hidden-xs" href="/featured-product_Jan15-2014_Statistica">
