--- a/widgets/featured-products/slick.htm
+++ b/widgets/featured-products/slick.htm
@@ -4,7 +4,7 @@
 
       <h3 class="feature inline-block mt-0">Featured Products</h3>
       <a href="/trials/" class="hidden-xs ml-10">View all</a>
-      <div class="slick" data-slide-sm="2" data-arrows="top">
+      <div class="slick" data-slide-lg="3" data-slide-md="3" data-slide-sm="2"  data-deactive="xs-only">
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="/products/archive-manager/" target="_self"><img class="img-responsive img-border center-block-xs"
                                                                    src="../image.php?w=370&h=250&c=c0c0c0&t="/></a>
@@ -329,8 +329,10 @@
           <div class="polaris-divider visible-xs"></div>
         </div>
       </div>
-      <div class="visible-xs"><a class="btn btn-default btn-block">Show More Featured Products</a><a
-          class="btn btn-primary btn-block" href="/trials/">View All Products</a></div>
+      <div class="clearfix"></div>
+      <div class="visible-xs">
+        <a class="btn btn-default btn-block mb-20">Show More Featured Products</a>
+        <a class="btn btn-primary btn-block" href="/trials/">View All Products</a></div>
     </section>
   </div>
 </div>
