--- a/widgets/featured-products/slick.htm
+++ b/widgets/featured-products/slick.htm
@@ -4,7 +4,9 @@
 
       <h3 class="feature inline-block mt-0">Featured Products</h3>
       <a href="/trials/" class="hidden-xs ml-10">View all</a>
-      <div class="slick" data-slide-lg="3" data-slide-md="3" data-slide-sm="2"  data-deactive="xs-only">
+      <div class="slick-arrows mr-40-sm-only mr-md-40"></div>
+      <div class="slick arrows-top-bottom" data-slide-lg="3" data-slide-md="3" data-slide-sm="2" data-scroll-lg="3"
+           data-scroll-md="3" data-scroll-sm="2">
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="/products/archive-manager/" target="_self"><img class="img-responsive img-border center-block-xs"
                                                                    src="../image.php?w=370&h=250&c=c0c0c0&t="/></a>
@@ -329,8 +331,12 @@
           <div class="polaris-divider visible-xs"></div>
         </div>
       </div>
+      <div class="pull-right hidden-xs mt-30 col-sm-6 col-md-5 col-lg-3 pr-0">
+        <div class="slide-info ml-20 inline-block"></div>
+        <div class="slick-arrows mr-40-sm-only mr-md-40"></div>
+      </div>
       <div class="clearfix"></div>
-      <div class="visible-xs">
+      <div class="visible-xs hidden">
         <a class="btn btn-default btn-block mb-20">Show More Featured Products</a>
         <a class="btn btn-primary btn-block" href="/trials/">View All Products</a></div>
     </section>
