rebased from  current-sprint branch.
Change-Id: Ife5d3e480813f0ee5ed5a34c3aab5ec0f0a1b7c8

--- a/pages/registration/sonicwall-competitive-trade-in/sonicwall-competitive-trade-in.html
+++ b/pages/registration/sonicwall-competitive-trade-in/sonicwall-competitive-trade-in.html
@@ -21,22 +21,22 @@
 	}
 </style>
 
-<input type="hidden" id="isRegisterPage" value="true"/>
-<input id="AssetCodeID" name="AssetCodeID" type="hidden" value="62482"/>
-<input id="LeadForSiteID" name="LeadForSiteID" type="hidden" value="15"/>
-<input id="EventID" name="EventID" type="hidden" value=""/>
-<input id="IsEventSeries" name="IsEventSeries" type="hidden" value="0"/>
-<input id="LandingPageID" name="LandingPageID" type="hidden" value=""/>
-<input id="AssetEmployeeCountFieldName" name="AssetEmployeeCountFieldName" type="hidden" value=""/>
-<input id="AssetEmployeeCountOption" name="AssetEmployeeCountOption" type="hidden" value=""/>
-<input id="RegDBCountryCode" name="RegDBCountryCode" type="hidden" value=""/>
+<input type="hidden" id="isRegisterPage" value="true" />
+<input id="AssetCodeID" name="AssetCodeID" type="hidden" value="62482" />
+<input id="LeadForSiteID" name="LeadForSiteID" type="hidden" value="15" />
+<input id="EventID" name="EventID" type="hidden" value="" />
+<input id="IsEventSeries" name="IsEventSeries" type="hidden" value="0" />
+<input id="LandingPageID" name="LandingPageID" type="hidden" value="" />
+<input id="AssetEmployeeCountFieldName" name="AssetEmployeeCountFieldName" type="hidden" value="" />
+<input id="AssetEmployeeCountOption" name="AssetEmployeeCountOption" type="hidden" value="" />
+<input id="RegDBCountryCode" name="RegDBCountryCode" type="hidden" value="" />
 
 <input id="ProfileFields" name="ProfileFields" type="hidden"
-	   value="FirstName,LastName,Email,Company,CountryCode,City,State_Province,PostalCode,Phone"/>
-<input id="PredefinedFields" name="PredefinedFields" type="hidden" value=""/>
-<input id="CustomFields" name="CustomFields" type="hidden" value=""/>
-<input id="DBIndustrySIC" name="DBIndustrySIC" type="hidden" value=""/>
-<input id="ProspectFieldCookie" name="ProspectFieldCookie" type="hidden" value=""/>
+       value="FirstName,LastName,Email,Company,CountryCode,City,State_Province,PostalCode,Phone" />
+<input id="PredefinedFields" name="PredefinedFields" type="hidden" value="" />
+<input id="CustomFields" name="CustomFields" type="hidden" value="" />
+<input id="DBIndustrySIC" name="DBIndustrySIC" type="hidden" value="" />
+<input id="ProspectFieldCookie" name="ProspectFieldCookie" type="hidden" value="" />
 
 <div class="container breadcrumb-container hidden-xs">
 	<ul class="breadcrumb">
@@ -51,7 +51,7 @@
 		<div style="display: block;">
 			<a href="http://www.sonicwall.com/assets/26490/" target="">
 				<img class="img-responsive" src="/images/banner/1170-240/ellen_and_trey_03079.jpg"
-					 alt=" Éxito para todo tipo de socio">
+				     alt=" Éxito para todo tipo de socio">
 				<div class="caption-wrapper width-47">
 					<h2 class="headline text-blue mb-0">Get a great deal on deeper network security </h2>
 					<h4 class="subheadline text-dark-gray">Join the Dell Security Customer Advantage Program.</h4>
@@ -109,7 +109,7 @@
 				<script src='//player.ooyala.com/v3/9eba220ad98c47cda9fdf6ba82ce607a?callback=receiveOoyalaP3Event'></script>
 				<![endif]--><!--[if !IE]> -->
 				<script
-						src="//player.ooyala.com/v3/9eba220ad98c47cda9fdf6ba82ce607a?platform=html5&amp;callback=receiveOoyalaP3Event"></script>
+					src="//player.ooyala.com/v3/9eba220ad98c47cda9fdf6ba82ce607a?platform=html5&amp;callback=receiveOoyalaP3Event"></script>
 				<!-- <![endif]-->
 				<div style="width:482px; height:232px;" class="large-video" id="ooyalaplayer"></div>
 				<script>
@@ -166,7 +166,7 @@
 							</div>
 							<div>
 								<input type="text" title="First Name" name="FirstName" id="FirstName" maxlength="50"
-									   class="form-control" required>
+								       class="form-control" required>
 							</div>
 							<div id="err_FirstName" style="display:none;"></div>
 						</div>
@@ -177,7 +177,7 @@
 							</div>
 							<div>
 								<input type="text" title="Last Name" name="LastName" id="LastName" maxlength="50" class="form-control"
-									   required>
+								       required>
 							</div>
 							<div id="err_LastName" style="display:none;"></div>
 						</div>
@@ -188,7 +188,7 @@
 							</div>
 							<div>
 								<input type="text" title="Business Email" name="Email" id="Email" maxlength="100" class="form-control"
-									   required>
+								       required>
 							</div>
 							<div id="err_Email" style="display:none;"></div>
 						</div>
@@ -199,7 +199,7 @@
 							</div>
 							<div>
 								<input type="text" title="Company" name="Company" id="Company" maxlength="100" class="form-control"
-									   required>
+								       required>
 							</div>
 							<div id="err_Company" style="display:none;"></div>
 						</div>
@@ -210,7 +210,7 @@
 							</div>
 							<div>
 								<select name="CountryCode" title="Country" id="CountryCode" class="form-control"
-										onchange="validother(this);" required></select>
+								        onchange="validother(this);" required></select>
 							</div>
 							<div id="err_CountryCode" style="display:none;"></div>
 						</div>
@@ -231,7 +231,7 @@
 							</div>
 							<div>
 								<select name="State_Province" title="State" id="State_Province" class="form-control"
-										onchange="validother(this);" required></select>
+								        onchange="validother(this);" required></select>
 							</div>
 							<div id="err_State_Province" style="display:none;"></div>
 						</div>
@@ -242,7 +242,7 @@
 							</div>
 							<div>
 								<input type="text" title="Postal Code" name="PostalCode" id="PostalCode" maxlength="30"
-									   class="form-control" required>
+								       class="form-control" required>
 							</div>
 							<div id="err_PostalCode" style="display:none;"></div>
 						</div>
@@ -274,7 +274,7 @@
 							<div></div>
 							<div>
 								You may withdraw your consent at any time. Please visit our <a href="/legal/privacy.aspx"
-																							   target="blank">Privacy
+								                                                               target="blank">Privacy
 								Statement</a> for
 								additional information or <a href="/company/contact-us.aspx" target="blank">Contact Us</a> for further
 								inquiries.
@@ -287,8 +287,8 @@
 	</div>
 </div>
 
-<script type="text/javascript" src='/viewScripts/commonv2.js?201605231245'></script>
-<script type="text/javascript" src='/viewScripts/registerv2.js?201606060528'></script>
+<script type="text/javascript" src="/viewScripts/commonv2.js?201605231245"></script>
+<script type="text/javascript" src="/viewScripts/registerv2.js?201606060528"></script>
 <script type="text/javascript">
 	var dataset = null, pricelistdescription = null, pointer = [];
 
