Add clear-fix accordingly
Change-Id: I9988c1161379c6aacff8220fa26dd95a14905a51

--- a/widgets/listing-entries/index.htm
+++ b/widgets/listing-entries/index.htm
@@ -65,6 +65,7 @@
 					</p>
 				</a>
 			</div>
+			<div class="clearfix visible-sm"></div>
 			<div class="col-md-3 col-sm-4 col-xs-12">
 				<a href="#">
 					<div class="border-grey">
@@ -84,6 +85,7 @@
 					<p class="recorded-date">Recorded Date: July 30, 2015</p>
 				</a>
 			</div>
+			<div class="clearfix visible-lg visible-md"></div>
 			<div class="col-md-3 col-sm-4 col-xs-12">
 				<a href="#">
 					<div class="border-grey">
@@ -123,89 +125,7 @@
 					<p class="dates">Date: July 7th - 28th, 2015</p>
 				</a>
 			</div>
-			<div class="col-md-3 col-sm-4 col-xs-12">
-				<a href="#">
-					<div class="border-grey">
-						<p class="listing-header bg-green">In Person Event</p>
-						<img class="img-responsive" src="../../images/shared/listing-entries/in-person-event.jpg"
-								 alt="online event info">
-					</div>
-					<h4 class="text-blue">
-						CAMP IT Conference
-					</h4>
-
-					<p class="teaser">
-						Dell Software is proud to sponsor and
-						present at the CAMP IT Conference - IT
-						Infrastructure / Operations
-					</p>
-
-					<p class="dates">Date: July 9, 2015</p>
-
-					<p class="location">
-						Location: Orlando, Florida
-						Orange County Convention Center
-					</p>
-				</a>
-			</div>
-			<div class="col-md-3 col-sm-4 col-xs-12 ">
-				<a href="#">
-					<div class="border-grey">
-						<p class="listing-header bg-orange">On-Demand Webcast</p>
-						<img class="img-responsive" src="../../images/shared/listing-entries/webcast.jpg" alt="online event info">
-					</div>
-					<h4 class="text-blue">
-						Microsoft Exchange, Office 365 or Hybrid
-					</h4>
-
-					<p class="teaser">
-						What were you doing on june 11, 1996?
-						Why? Well, that was the day that Microsoft
-						launched the fist version of Exchange.
-					</p>
-
-					<p class="recorded-date">Recorded Date: July 30, 2015</p>
-				</a>
-			</div>
-			<div class="col-md-3 col-sm-4 col-xs-12">
-				<a href="#">
-					<div class="border-grey">
-						<p class="listing-header bg-green">Online Event</p>
-						<img class="img-responsive" src="../../images/shared/listing-entries/online-event.jpg"
-								 alt="online event info">
-					</div>
-					<h4 class="text-blue">Appasure Boot Camp Webinar</h4>
-
-					<p class="teaser">
-						Learn how to properly size and setup your environments,
-						deploy agents, configure backups, set up replication,
-						and customize alerting.
-					</p>
-
-					<p class="dates">Dates: July 7th - Oct. 15th, 2015</p>
-				</a>
-			</div>
-			<div class="col-md-3 col-sm-4 col-xs-12">
-				<a href="#">
-					<div class="border-grey">
-						<p class="listing-header bg-green">Online Event</p>
-						<img class="img-responsive" src="../../images/shared/listing-entries/online-event.jpg"
-								 alt="online event info">
-					</div>
-					<h4 class="text-blue">
-						Live Demo: KACE K1000 and
-						Desktop Authority Management suite
-					</h4>
-
-					<p class="teaser">
-						Join this interactive session where a Dell endpoint
-						systems management expert will walk you through a live
-						product demostration and answer your specific questions.
-					</p>
-
-					<p class="dates">Date: July 7th - 28th, 2015</p>
-				</a>
-			</div>
+			<div class="clearfix visible-sm"></div>
 			<div class="col-md-3 col-sm-4 col-xs-12">
 				<a href="#">
 					<div class="border-grey">
@@ -250,6 +170,7 @@
 					<p class="recorded-date">Recorded Date: July 30, 2015</p>
 				</a>
 			</div>
+			<div class="clearfix visible-lg visible-md"></div>
 			<div class="col-md-3 col-sm-4 col-xs-12">
 				<a href="#">
 					<div class="border-grey">
@@ -268,6 +189,7 @@
 					<p class="dates">Dates: July 7th - Oct. 15th, 2015</p>
 				</a>
 			</div>
+			<div class="clearfix visible-sm"></div>
 			<div class="col-md-3 col-sm-4 col-xs-12">
 				<a href="#">
 					<div class="border-grey">
@@ -333,6 +255,92 @@
 					<p class="recorded-date">Recorded Date: July 30, 2015</p>
 				</a>
 			</div>
+			<div class="clearfix"></div>
+			<div class="col-md-3 col-sm-4 col-xs-12">
+				<a href="#">
+					<div class="border-grey">
+						<p class="listing-header bg-green">Online Event</p>
+						<img class="img-responsive" src="../../images/shared/listing-entries/online-event.jpg"
+								 alt="online event info">
+					</div>
+					<h4 class="text-blue">Appasure Boot Camp Webinar</h4>
+
+					<p class="teaser">
+						Learn how to properly size and setup your environments,
+						deploy agents, configure backups, set up replication,
+						and customize alerting.
+					</p>
+
+					<p class="dates">Dates: July 7th - Oct. 15th, 2015</p>
+				</a>
+			</div>
+			<div class="col-md-3 col-sm-4 col-xs-12">
+				<a href="#">
+					<div class="border-grey">
+						<p class="listing-header bg-green">Online Event</p>
+						<img class="img-responsive" src="../../images/shared/listing-entries/online-event.jpg"
+								 alt="online event info">
+					</div>
+					<h4 class="text-blue">
+						Live Demo: KACE K1000 and
+						Desktop Authority Management suite
+					</h4>
+
+					<p class="teaser">
+						Join this interactive session where a Dell endpoint
+						systems management expert will walk you through a live
+						product demostration and answer your specific questions.
+					</p>
+
+					<p class="dates">Date: July 7th - 28th, 2015</p>
+				</a>
+			</div>
+			<div class="col-md-3 col-sm-4 col-xs-12">
+				<a href="#">
+					<div class="border-grey">
+						<p class="listing-header bg-green">In Person Event</p>
+						<img class="img-responsive" src="../../images/shared/listing-entries/in-person-event.jpg"
+								 alt="online event info">
+					</div>
+					<h4 class="text-blue">
+						CAMP IT Conference
+					</h4>
+
+					<p class="teaser">
+						Dell Software is proud to sponsor and
+						present at the CAMP IT Conference - IT
+						Infrastructure / Operations
+					</p>
+
+					<p class="dates">Date: July 9, 2015</p>
+
+					<p class="location">
+						Location: Orlando, Florida
+						Orange County Convention Center
+					</p>
+				</a>
+			</div>
+			<div class="clearfix visible-sm"></div>
+			<div class="col-md-3 col-sm-4 col-xs-12">
+				<a href="#">
+					<div class="border-grey">
+						<p class="listing-header bg-orange">On-Demand Webcast</p>
+						<img class="img-responsive" src="../../images/shared/listing-entries/webcast.jpg" alt="online event info">
+					</div>
+					<h4 class="text-blue">
+						Microsoft Exchange, Office 365 or Hybrid
+					</h4>
+
+					<p class="teaser">
+						What were you doing on june 11, 1996?
+						Why? Well, that was the day that Microsoft
+						launched the fist version of Exchange.
+					</p>
+
+					<p class="recorded-date">Recorded Date: July 30, 2015</p>
+				</a>
+			</div>
+			<div class="clearfix visible-lg visible-md"></div>
 		</div>
 	</section>
 </div>
