--- a/widgets/2-column-non-carousel/link-list.htm
+++ b/widgets/2-column-non-carousel/link-list.htm
@@ -4,7 +4,7 @@
 		<!--left column start-->
 		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>
-				Sales
+				Saless
 			</h4>
 			<ul class="pl-15">
 				<li><a href="/contact-a-dell-expert">Contact My Sales Rep</a></li>
