--- a/widgets/2-column-non-carousel/link-list.htm
+++ b/widgets/2-column-non-carousel/link-list.htm
@@ -3,9 +3,7 @@
 	<div class="row">
 		<!--left column start-->
 		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
-			<h4>
-				Sales
-			</h4>
+			<h4>Sales</h4>
 			<ul class="pl-15">
 				<li><a href="/contact-a-dell-expert">Contact My Sales Rep</a></li>
 				<li><a href="#GlobalSalesPhoneNumbers">Global Sales Phone Numbers</a></li>
