Add placeholder comment.
Change-Id: I21dffbc2f961e091ecba1be2bb4ddeae5ca0e3ff

--- a/widgets/ooyala-video/index.htm
+++ b/widgets/ooyala-video/index.htm
@@ -1,3 +1,4 @@
+<!-- Placeholder -->
 <div class="container">
 	<div class="media-player-container">
 		<img src="http://ak.c.ooyala.com/JrcDM1dzpLcWbnRj8MejkXYRvUUKBSSV/promo264707190" class="img-responsive img-border">
