Fixing the clear-fix issue on different views
Change-Id: Ia9af039cd30a90b738daf59fb700eddd0c96f90e

--- a/widgets/2-column-non-carousel/index.html
+++ b/widgets/2-column-non-carousel/index.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 mb-30">
-				<div class="p-20 pull-left bg-white" data-target="match-height">
+				<div class="p-20 bg-white" data-target="match-height">
 					<h4>
 						<a href="#">KACE</a>
 					</h4>
@@ -99,7 +99,7 @@
 			</div>
 
 			<div class="col-xs-12 col-sm-6 mb-30">
-				<div class="p-20 pull-left bg-white" data-target="match-height">
+				<div class="p-20 bg-white" data-target="match-height">
 					<h4>
 						<a href="#">Dell Software</a>
 					</h4>
@@ -159,7 +159,7 @@
 			</div>
 
 			<div class="col-xs-12 col-sm-6 mb-30">
-				<div class="p-20 pull-left bg-white" data-target="match-height">
+				<div class="p-20 bg-white" data-target="match-height">
 					<h4>
 						<a href="http://www.boomi.com/">Boomi</a>
 					</h4>
