--- a/widgets/3-column-non-carousel/link-list.html
+++ b/widgets/3-column-non-carousel/link-list.html
@@ -1,8 +1,8 @@
 <div class="container">
-	<!--first row start-->
+
 	<div class="row">
-		<!--left column start-->
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
+
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>Sales</h4>
 			<ul class="pl-15">
 				<li><a href="/contact-a-dell-expert">Contact My Sales Rep</a></li>
@@ -13,9 +13,21 @@
 				<li><a href="/products/">Product Information</a></li>
 			</ul>
 		</div>
-		<!--left column end-->
-		<!--right column start-->
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
+			<h4>
+				Support
+			</h4>
+			<ul class="pl-15">
+				<li><a href="https://support.software.dell.com/manage-service-request">Product Technical Support</a></li>
+				<li><a href="https://support.software.dell.com/manage-service-request">Product Registration</a></li>
+				<li><a href="https://support.software.dell.com/manage-service-request">Support Registration</a></li>
+				<li><a href="https://support.software.dell.com/licensing-assistance">Licensing Assistance</a></li>
+				<li><a href="https://support.software.dell.com/training-product-select">Request Training</a></li>
+				<li><a href=" http://software.dell.com/support-professional-services-form">Request Professional Service</a></li>
+			</ul>
+		</div>
+		<div class="clearfix visible-sm"></div>
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>
 				Licensing
 			</h4>
@@ -29,25 +41,9 @@
 					problem</a></li>
 			</ul>
 		</div>
-		<!--right column start-->
-	</div>
-	<!--first row end-->
-	<!--second row start-->
-	<div class="row">
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
-			<h4>
-				Support
-			</h4>
-			<ul class="pl-15">
-				<li><a href="https://support.software.dell.com/manage-service-request">Product Technical Support</a></li>
-				<li><a href="https://support.software.dell.com/manage-service-request">Product Registration</a></li>
-				<li><a href="https://support.software.dell.com/manage-service-request">Support Registration</a></li>
-				<li><a href="https://support.software.dell.com/licensing-assistance">Licensing Assistance</a></li>
-				<li><a href="https://support.software.dell.com/training-product-select">Request Training</a></li>
-				<li><a href=" http://software.dell.com/support-professional-services-form">Request Professional Service</a></li>
-			</ul>
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
+
+		<div class="clearfix visible-md visible-lg"></div>
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>
 				Support Renewals
 			</h4>
@@ -58,11 +54,8 @@
 					Renewals</a></li>
 			</ul>
 		</div>
-	</div>
-	<!--second row end-->
-	<!--third row start-->
-	<div class="row">
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
+		<div class="clearfix visible-sm"></div>
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>
 				Accounting
 			</h4>
@@ -74,7 +67,7 @@
 				<li><a href="/feedback?topic=Account_support">Accounts Receivable/Billing</a></li>
 			</ul>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 mb-40">
+		<div class="col-xs-12 col-sm-6 col-md-4 mb-40">
 			<h4>
 				Need Additional Assistance?
 			</h4>
@@ -86,6 +79,7 @@
 					Dell Corporate for Hardware Assistance</a></li>
 			</ul>
 		</div>
+		<div class="clearfix"></div>
 	</div>
-	<!--third row end-->
+
 </div>
