--- a/widgets/affix/mobile-with-content.htm
+++ b/widgets/affix/mobile-with-content.htm
@@ -1,28 +1,26 @@
 <div class="container container-fluid-xs mt-40-sm mb-20-sm pl-0-xs pr-0-xs">
 
   <div id="affix-nav" class="affix-list-xs affix" data-even-width="true">
-      <ul class="nav">
-        <li>
-          <!--href value minus # corresponds to id of each section-->
-          <!--if we want to have the first tab active from the beginning we need to use id="top"-->
-          <a href="#features" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Features<i class="menu-indicator pull-right visible-xs"></i></a>
-        </li>
-        <li>
-          <a href="#tour" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Tour<i class="menu-indicator pull-right visible-xs"></i></a>
-        </li>
-        <li>
-          <a href="#specifications" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Specifications<i
-            class="menu-indicator pull-right visible-xs"></i></a>
-        </li>
-        <li>
-          <a href="#resources" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Resources<i class="menu-indicator pull-right visible-xs"></i></a>
-        </li>
-        <li>
-          <a href="#support" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Support &amp; Services<i
-            class="menu-indicator pull-right visible-xs"></i></a>
-        </li>
-      </ul>
-    </div>
+	  <ul class="nav">
+		  <li>
+			  <!--href value minus # corresponds to id of each section-->
+			  <!--if we want to have the first tab active from the beginning we need to use id="top"-->
+			  <a href="#features" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Features<i class="menu-indicator pull-right visible-xs"></i></a>
+		  </li>
+		  <li>
+			  <a href="#tour" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Tour<i class="menu-indicator pull-right visible-xs"></i></a>
+		  </li>
+		  <li>
+			  <a href="#specifications" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Specifications<i class="menu-indicator pull-right visible-xs"></i></a>
+		  </li>
+		  <li>
+			  <a href="#resources" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Resources<i class="menu-indicator pull-right visible-xs"></i></a>
+		  </li>
+		  <li>
+			  <a href="#support" data-toggle="offcanvas" data-offcanvas-append="#next-step-container">Support &amp; Services<i class="menu-indicator pull-right visible-xs"></i></a>
+		  </li>
+	  </ul>
+  </div>
 
 </div>
 <!-- Features -->
